# OneRec

./: .gitattributes  .gitignore  PROJECT_UNDERSTANDING.md  README.md  REFACTORED_PROJECT_GUIDE.md  _common.sh  audit_report_v3.md  calc.py  convert.sh  convert_dataset.py  evaluate.py  evaluate.sh  experiment_results.csv  merge.py  migration_diff_report.md  mini_onerec_reproduction_progress.md  minionerec_trainer.py  parity_check.py  parity_matrix.md  preprocess_amazon18.sh  preprocess_amazon23.sh  project_understanding_report.md  pyproject.toml  rl.py  rl.sh  sft.py  sft.sh  sid_generate.sh  sid_train.sh  split.py  text2emb.sh
archive/: README.md
archive/old_docs/: PROJECT_UNDERSTANDING.md  audit_report_v3.md
config/: convert.yaml  datasets.yaml  embed.yaml  evaluate.yaml  rl.yaml  sft.yaml  sid_generate.yaml  sid_train.yaml
data/: amazon14_data_process.py  amazon18_data_process.sh  amazon23_data_process.sh
flows/evaluate/: default.yaml
flows/sft/: default.yaml
legacy/: README.md
legacy/old_root_scripts/: LogitProcessor.py  data.py
minionerec/: __init__.py
rq/: generate_indices.py  rqvae.sh
rq/text2emb/: amazon_text2emb.py
scripts/: _common.sh  convert_dataset.sh  evaluate.sh  rl.sh  sft.sh  text2emb.sh
src/minionerec/: __init__.py
src/onerec/: __init__.py  config.py  main.py
tests/unit/: test_cli_help.py  test_config_loader.py  test_config_templates.py  test_constrained_decoding.py  test_convert_contracts.py  test_deepspeed_compat.py  test_evaluate_split_merge.py  test_flow_layout.py  test_precision_policy.py  test_semantic_id.py
(+125 files in other folders)
